fix menu cropped at the bottom with height 100%

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html {
 
 html,
 body {
-  height: 100vh;
+  height: 100%;
   background-color: #ffbd5e;
 }
 
@@ -40,7 +40,7 @@ svg {
     "main"
     "footer";
   grid-template-rows: 0.7fr 10fr 1.3fr;
-  height: 100vh;
+  height: 100%;
   background-image: url("./assets/imgs/bgFondo.png");
   background-size: cover;
   background-position: center;
